<resources>
    <string name="app_name" translatable="false">SkyCast</string>
    <string name="settings">Settings</string>
    <string name="alram">Alram</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="exit">Exit</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rain">Rain</string>
    <string name="humidity">Humidity</string>
    <string name="today">Today</string>
    <string name="next_7_days"><![CDATA[Next 7 Days >]]></string>
    <string name="_5_day_forecast">  5-DAY FORECAST</string>
    <string name="saved_to_bookmark">saved to bookmark</string>
    <string name="remove_from_bookmark">remove from bookmark</string>
    <string name="pressure">Pressure</string>
    <string name="clouds">Clouds</string>
    <string name="stop">Stop</string>
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>

    <!-- Wind Speed Section -->
    <string name="wind_speed">Wind Speed</string>
    <string name="km_per_hour">Kilometers / Hour</string>
    <string name="m_per_sec">Meters / Second</string>
    <string name="mile_per_hour">Mile / Hour</string>

    <!-- Temperature Section -->
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>

    <!-- Notification Section -->
    <string name="notifications">Notifications</string>
    <string name="enabled">Alarm</string>
    <string name="disabled">Notification</string>
    <string name="min">"Min: "</string>
    <string name="max">"Max: "</string>

    <string-array name="language_options">
        <item>Arabic</item>
        <item>English</item>
    </string-array>

    <string-array name="unit_options">
        <item>K/h</item>
        <item>M/sec</item>
    </string-array>

    <string-array name="notification_options">
        <item>default</item>
        <item>silent</item>
        <item>vibrate</item>
    </string-array>
</resources>

