<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"

xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
<group
    android:checkableBehavior="single">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:background="#80FFFFFF"
        android:icon="@drawable/home"/>

    <item
        android:id="@+id/nav_fav"
        android:title="@string/favorite"
        android:background="#80FFFFFF"
        android:icon="@drawable/bookmark"/>


    <item
        android:id="@+id/nav_alram"
        android:title="@string/alram"
        android:background="#80FFFFFF"
        android:icon="@drawable/alarm"/>

    <item
    android:id="@+id/nav_settings"
    android:icon="@drawable/settings"
        android:background="#80FFFF"
        android:title="@string/settings"/>








</group>
    <item

        android:title=""
   >
        <menu>
            <item
                android:id="@+id/nav_exit"
                android:title="@string/exit"
                android:icon="@drawable/exit"/>
        </menu>
    </item>


</menu>